force-app/main/default/objects/Account/fields/Account_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Assignment_Date__c</fullName>
    <description>This field stores the date time in which this account was last assignment to the current owner from the pool or viceversa.</description>
    <label>Account Assignment Date</label>
    <type>DateTime</type>
</CustomField>