force-app/main/default/objects/Account/fields/Account_Book_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Book_Owner__c</fullName>
    <formula>Books_Of_Business__r.AE__r.FirstName + &apos; &apos; + Books_Of_Business__r.AE__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Book Owner</label>
    <type>Text</type>
</CustomField>