force-app/main/default/objects/Account/fields/Account_Book_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Book_Status__c</fullName>
    <formula>TEXT(Books_Of_Business__r.Account_Book_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Book Status</label>
    <type>Text</type>
</CustomField>