force-app/main/default/objects/Account/fields/Account_Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Quality_Score__c</fullName>
    <description>The Account Data Quality Score gives us insight into the completeness and extent of validation on any given account.</description>
    <inlineHelpText>The Account Data Quality Score gives us insight into the completeness and extent of validation on any given account.</inlineHelpText>
    <label>Account Data Quality Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>