force-app/main/default/objects/Account/fields/Account_Lifetime_ACV__c.field-meta.xml
<CustomField>
    <fullName>Account_Lifetime_ACV__c</fullName>
    <description>Total ACV bookings over lifetime of account (DLRS)</description>
    <label>Account Lifetime ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>