force-app/main/default/objects/Account/fields/Account_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Updated__c</fullName>
    <formula>IF( Lifetime_Purchases__c &gt; 0, &apos;Existing Customer&apos;, &apos;Non Existing Customer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated Account Status</label>
    <type>Text</type>
</CustomField>