force-app/main/default/objects/Account/fields/Account_with_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_with_Owner__c</fullName>
    <description>Account name with account owner</description>
    <formula>Name &amp; &quot; (Owned By: &quot; &amp; Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName &amp; &quot;)&quot;</formula>
    <label>Account with Owner</label>
    <type>Text</type>
</CustomField>