force-app/main/default/objects/Account/fields/Active_Growth_Campaigns_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Growth_Campaigns_on_Account__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field totaling the number of contacts on the account that are associated with an active Growth campaign.</description>
    <label>Active Growth Campaigns on Account</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>