force-app/main/default/objects/Account/fields/Active_P_P_Customer__c.field-meta.xml
<CustomField>
    <fullName>Active_P_P_Customer__c</fullName>
    <description>P&amp;P</description>
    <formula>NOT(ISBLANK(TEXT( Platform_Type__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active P&amp;P Customer</label>
    <type>Checkbox</type>
</CustomField>