force-app/main/default/objects/Account/fields/Active_Payment_Processing__c.field-meta.xml
<CustomField>
    <fullName>Active_Payment_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent rare edge case of customer trying to go through checkout link twice</description>
    <label>Active Payment Processing</label>
    <type>Checkbox</type>
</CustomField>