force-app/main/default/objects/Account/fields/Active_Trials__c.field-meta.xml
<CustomField>
    <fullName>Active_Trials__c</fullName>
    <label>Active Trials</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Free Trial Opportunity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Trial_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>