force-app/main/default/objects/Account/fields/Actual_Deactivate_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deactivate_Date__c</fullName>
    <label>Actual Deactivate Date</label>
    <type>Date</type>
</CustomField>