force-app/main/default/objects/Account/fields/ADR_Assignment__c.field-meta.xml
<CustomField>
    <fullName>ADR_Assignment__c</fullName>
    <description>added for GTMS-11048</description>
    <formula>Books_Of_Business__r.ADR__r.FirstName + &apos; &apos; + Books_Of_Business__r.ADR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Deprecated] ADR Assignment</label>
    <type>Text</type>
</CustomField>