force-app/main/default/objects/Account/fields/ADR_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the account created or the first opportunity initiated via an ADR lead transfer?</description>
    <label>ADR Transfer</label>
    <type>Checkbox</type>
</CustomField>