force-app/main/default/objects/Account/fields/ADR_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_Date__c</fullName>
    <label>ADR Transfer Date</label>
    <type>Date</type>
</CustomField>