force-app/main/default/objects/Account/fields/ADR_Transfer_Status__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_Status__c</fullName>
    <label>ADR Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Disqualified - Already Engaged</fullName>
            </value>
            <value>
                <fullName>Disqualified - No Show</fullName>
            </value>
            <value>
                <fullName>Disqualified - No Opportunity</fullName>
            </value>
            <value>
                <fullName>Disqualified - Wrong Profile</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>