force-app/main/default/objects/Account/fields/ADRAssignment__c.field-meta.xml
<CustomField>
    <fullName>ADRAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsH2gj</relationshipName>
    <type>Lookup</type>
</CustomField>