force-app/main/default/objects/Account/fields/AE_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Notes__c</fullName>
    <label>AE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>