force-app/main/default/objects/Account/fields/AE_to_CSM_handoff_notes__c.field-meta.xml
<CustomField>
    <fullName>AE_to_CSM_handoff_notes__c</fullName>
    <description>A text field for AEs to leave handoff notes for CSMs</description>
    <inlineHelpText>Other helpful information like any secondary contacts, previous providers, communication tips, specific features, &amp; if purchased for insurance.
Key selling points:
Additional stakeholders:
Industry: 
Business model:
Vehicle type:
Previous Solution:
Program Goals:
Training Needs:
Timeline:
Go-Live Date:
Installation:
Concerns:
Other:</inlineHelpText>
    <label>AE to CS handoff notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>