force-app/main/default/objects/Account/fields/Approved_for_Internal_Financing__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Internal_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Internal Financing</label>
    <type>Checkbox</type>
</CustomField>