force-app/main/default/objects/Account/fields/Approved_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Payment_Type__c</fullName>
    <label>Approved Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Types</valueSetName>
    </valueSet>
</CustomField>