force-app/main/default/objects/Account/fields/ARR_100K__c.field-meta.xml
<CustomField>
    <fullName>ARR_100K__c</fullName>
    <formula>Customer_ARR__c  &gt; 100000</formula>
    <label>ARR &gt;100K</label>
    <type>Checkbox</type>
</CustomField>