force-app/main/default/objects/Account/fields/Assign_CSM__c.field-meta.xml
<CustomField>
    <fullName>Assign_CSM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as a trigger for the CSM round robin process.</description>
    <label>Assign CSM</label>
    <type>Checkbox</type>
</CustomField>