force-app/main/default/objects/Account/fields/Auto_renewal_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Auto_renewal_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to prevent customer from being auto-renewed as they have opted out via email</description>
    <label>Auto-renewal Opt Out</label>
    <type>Checkbox</type>
</CustomField>