force-app/main/default/objects/Account/fields/B360_ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>B360_ContractEndDate__c</fullName>
    <description>This will be coming from NetSuite as part of Integration and will be used by Webstore</description>
    <label>B360 Contract End Date</label>
    <type>Date</type>
</CustomField>