force-app/main/default/objects/Account/fields/B360_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>B360_Payment_Type__c</fullName>
    <description>This will be coming from NetSuite as part of Integration and will be used by Webstore</description>
    <label>B360 Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Types</valueSetName>
    </valueSet>
</CustomField>