force-app/main/default/objects/Account/fields/BigCommerce_Id__c.field-meta.xml
<CustomField>
    <fullName>BigCommerce_Id__c</fullName>
    <externalId>true</externalId>
    <label>BigCommerce Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>