force-app/main/default/objects/Account/fields/Billing_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Anniversary_Date__c</fullName>
    <description>GTMS-28086</description>
    <label>Billing Anniversary Date</label>
    <type>Date</type>
</CustomField>