force-app/main/default/objects/Account/fields/Billing_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_First_Name__c</fullName>
    <description>First name of billing contact. There is no direct reference to Billing Contact in Contact table because of email duplication rules. The billing contact in the Contact table will be in one of two places: In a row that directly belongs to the Billing Contact or Under &apos;billing&apos; columns (Billing_FirstName__c, etc) for one of the contacts that shares the same email</description>
    <label>Billing First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>