force-app/main/default/objects/Account/fields/Billing_Stripe_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Billing_Stripe_Customer_Id__c</fullName>
    <description>Id associated with account in Stripe</description>
    <label>Billing Stripe Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>