force-app/main/default/objects/Account/fields/Book_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Book_of_Business__c</fullName>
    <label>Book of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 1</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 2</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 3</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 4</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 5</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 6</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 10 Book 7</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 1</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 2</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 3</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 4</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 5</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 6</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 11 Book 7</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 12 Book 1</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 12 Book 2</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 12 Book 3</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 12 Book 4</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 12 Book 5</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 12 Book 6</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 1</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 2</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 3</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 4</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 5</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 6</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 17 Book 7</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 21 Book 1</fullName>
            </value>
            <value>
                <fullName>AE3 - Team 21 Book 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>