force-app/main/default/objects/Account/fields/Books_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Books_Of_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for Project Alpha - GTMS-10594</description>
    <label>Account Book</label>
    <referenceTo>Book_Of_Business__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>