force-app/main/default/objects/Account/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet</fullName>
                <default>true</default>
                <label>Fleet</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Machine Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>