force-app/main/default/objects/Account/fields/BVS__c.field-meta.xml
<CustomField>
    <fullName>BVS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Value Strategist</description>
    <inlineHelpText>Business Value Strategist</inlineHelpText>
    <label>Business Value Strategist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsI7ul</relationshipName>
    <type>Lookup</type>
</CustomField>