force-app/main/default/objects/Account/fields/Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to override various validation rules for automated process that run in user mode.</description>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>