force-app/main/default/objects/Account/fields/C360_Processed__c.field-meta.xml
<CustomField>
    <fullName>C360_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-26935 Rebuilding C360 Records. Created as part of recreation of Customer 360 data.</description>
    <label>C360 Processed</label>
    <type>Checkbox</type>
</CustomField>