force-app/main/default/objects/Account/fields/Camera_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Camera_Contract_End_Date__c</fullName>
    <label>Camera Contract End Date</label>
    <type>Date</type>
</CustomField>