force-app/main/default/objects/Account/fields/Canada_Geography__c.field-meta.xml
<CustomField>
    <fullName>Canada_Geography__c</fullName>
    <formula>IF( BillingCountry = &apos;Canada&apos;, 
CASE(BillingState,&apos;Alberta&apos;,&apos;West&apos;, 
&apos;British Columbia&apos;,&apos;West&apos;, 
&apos;Manitoba&apos;,&apos;West&apos;, 
&apos;New Brunswick&apos;,&apos;Northeast&apos;, 
&apos;Newfoundland and Labrador&apos;,&apos;Northeast&apos;, 
&apos;Northwest Territories&apos;,&apos;West&apos;, 
&apos;Nova Scotia&apos;,&apos;Northeast&apos;, 
&apos;Nunavut&apos;,&apos;West&apos;, 
&apos;Prince Edward Island&apos;,&apos;Northeast&apos;, 
&apos;Quebec&apos;,&apos;Northeast&apos;, 
&apos;Saskatchewan&apos;,&apos;West&apos;, 
&apos;Yukon&apos;,&apos;West&apos;,
&apos;Ontario&apos;,&apos;Northeast&apos;,
&apos;Other&apos;), 
&apos;Other&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canada Geography</label>
    <type>Text</type>
</CustomField>