force-app/main/default/objects/Account/fields/Carving_Account_Book_Segment__c.field-meta.xml
<CustomField>
    <fullName>Carving_Account_Book_Segment__c</fullName>
    <description>Look at account ownership based on the account owner, not the Account Size Segment field.</description>
    <label>Carving Account Book Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Mexico</fullName>
                <isActive>false</isActive>
                <label>Mexico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>