force-app/main/default/objects/Account/fields/Case_Count_30_days__c.field-meta.xml
<CustomField>
    <fullName>Case_Count_30_days__c</fullName>
    <label>Case Count 14 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>