force-app/main/default/objects/Account/fields/Churn_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Churn_Payment_Status__c</fullName>
    <label>Churn Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never a Customer</fullName>
                <default>true</default>
                <label>Never a Customer</label>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>