force-app/main/default/objects/Account/fields/Churn_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Reason__c</fullName>
    <description>This field is for the CSM to fill out the reason why an account is at risk for churn or return.</description>
    <label>Return Risk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>