force-app/main/default/objects/Account/fields/Churn_Update_CC_Link__c.field-meta.xml
<CustomField>
    <fullName>Churn_Update_CC_Link__c</fullName>
    <description>Link to share with customers so that they can update their cc information.</description>
    <label>Churn Update CC Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>