force-app/main/default/objects/Account/fields/Closed_Lost_Account__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Account__c</fullName>
    <description>True if all the revenue opportunities for the account are closed lost OR Lifetime Purchases = 0 (existing customer returned everything they purchased).</description>
    <formula>IF(AND(Revenue_Opportunities_Count__c= Closed_Lost_Opportunities__c,Revenue_Opportunities_Count__c&gt;0, Lifetime_Purchases__c =0), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Lost Account</label>
    <type>Checkbox</type>
</CustomField>