force-app/main/default/objects/Account/fields/CM_Tier__c.field-meta.xml
<CustomField>
    <fullName>CM_Tier__c</fullName>
    <label>CM Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tier_Values</valueSetName>
    </valueSet>
</CustomField>