force-app/main/default/objects/Account/fields/Co_Term_Account__c.field-meta.xml
<CustomField>
    <fullName>Co_Term_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account has chosen to co-terminate on one date</description>
    <label>Co-Term Account</label>
    <type>Checkbox</type>
</CustomField>