force-app/main/default/objects/Account/fields/Co_Term_License_Date__c.field-meta.xml
<CustomField>
    <fullName>Co_Term_License_Date__c</fullName>
    <description>Date for co-termed licenses</description>
    <label>License End Date</label>
    <type>Date</type>
</CustomField>