force-app/main/default/objects/Account/fields/Contract_Renewed_On__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewed_On__c</fullName>
    <inlineHelpText>Displays the next renewal date (+1 day after contract end date) based on the earliest active contract. It will be blank if no upcoming renewals. If a renewal is already closed, the next expiring contract date is shown.</inlineHelpText>
    <label>Contract Renews On</label>
    <type>Date</type>
</CustomField>