force-app/main/default/objects/Account/fields/Contract_Start_Date_new__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_new__c</fullName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>