force-app/main/default/objects/Account/fields/COVID_Impact_Reporting__c.field-meta.xml
<CustomField>
    <fullName>COVID_Impact_Reporting__c</fullName>
    <label>COVID Impact Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Deep Red</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Light Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>