force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <inlineHelpText>Credit Limit is on a monthly basis but is tied to the approved payment type and NOT Direct Monthly-specific</inlineHelpText>
    <label>Max Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>