force-app/main/default/objects/Account/fields/Critically_Escalated_Hardware_Returns__c.field-meta.xml
<CustomField>
    <fullName>Critically_Escalated_Hardware_Returns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by hardware team to denote major customers reporting hardware issues, referenced in Consolidated Returns Process builder to set Shipmate-Preference on opportunity to ShipmatePreference-0498 and will return the hardware directly to Samsara HQ.</description>
    <label>Critically Escalated Hardware Returns</label>
    <type>Checkbox</type>
</CustomField>