force-app/main/default/objects/Account/fields/CS_POC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CS_POC_Email_Address__c</fullName>
    <inlineHelpText>Please input email address associated with the CS POC FIRST NAME field
Very important to be filled out correctly b/c this is where we get the information to send our automated emails to with different resources</inlineHelpText>
    <label>CS POC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>