force-app/main/default/objects/Account/fields/CS_POC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_POC_First_Name__c</fullName>
    <inlineHelpText>The first name of the person responsible in your customers org that will handle on boarding for the Samsara platform</inlineHelpText>
    <label>CS POC First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>